--- a/style.css
+++ b/style.css
@@ -1,62 +1,84 @@
-/* Element Center Trick */
+/* MEDIA QUERY */
 
-/* PART 1: Image only*/
+/* With list */
+ul{
+    /* delete bullet points */
+    list-style: none;
+    /* no background needed, otherwise want to check the ul padding */
+    /* background: red; */
+    /* to make the icon right aligned */
+    text-align: right;
+    /* no need padding at all otherwise too big */
+    padding: 0;
+}
+li{
+    /* make it in the same line */
+    display: inline-block;
+    /* default font-size is also 16px in CSS */
+    /* using em for responsive web, so in mobile the text will be smaller */
+    font-size: 1.2em;
+    padding: 20px;
+    /* make it neat */
+    text-align: center;
+    /* background: rgb(21, 114, 175); */ /* no need because all can be  backgrounded */
+}
+/* remember class with space can be separately defined */
+/* float forces icon text separately from ul list definition, to make it left aligned */
+.icon{
+    float: left;
+}
+/* to color both desktop and mobile icon */
+.icon_color{
+    color:blueviolet;
+}
+.icon > h2{
+    /* need this margin because after float the heading will have its own margin */
+    /* so by setting margin = 0, the h2 text will be aligned with ul again */
+    margin: 0;
+}
+.button_green{
+    /* THE COMBINATION OF background and color */
+    /* for background color */
+    background: lightseagreen;
+    /* for text color */
+    color:white;
+}
+/* make the pic (img) has optimal width in respect to the screen (desktop or mobile) */
 img{
     /* it is recommended to use always percentage (%), 100% makes no need of horizontal scroll */
     width:100%;
     /* comment max-width below to set the maximum screen width of the pic1 for both desktop & mobile */
     max-width: 627px; /* if this active, mobile full, desktop smaller */
 }
-
-/* make pic2 center align with smaller width in desktop mode and pic2 is portrait */
-.pic2{
-    /* because width of img is set by 100% above, use pic2's height */
-    height: auto;
-    /* display block to make the pic2 has its own entire line, see display property ss */
-    display: block;
-    /* make pic2 center aligned with margin 0 auto, margin 0 for vertical */
-    margin: 0 auto;
-}
-
-/* PART 2: With icon, text and image */
-.icon{
-    width:100px;
-    /* MUST if inline with text: inline-block */
-    display: inline-block;
-    /* because height of icon>text, icon will be the standard of vertical-align in the same row as text */
-    /* set middle if want icon is in the middle of row (div), otherwise top or bottom */
-    vertical-align: middle;
-}
-.text{
-    /* to make text in the same line as icon above */
-    display: inline-block;
-    /* set middle if want text next to the middle of icon (also row), otherwise top or bottom */
-    vertical-align: middle;
-}   
-
-/* PART 3: Make icon in the middle of a background image */
-/* fill in the background image */
-.fondation{
-    background-image: url(https://c4.wallpaperflare.com/wallpaper/776/883/765/pure-ocean-blue-relaxing-nature-wallpaper-preview.jpg);
-    /* limit the height to the suitable screen height (Belinea screen) */
-    height: 450px;
-    /*  make the content of foundation (span/icon) center-aligned horizontally */
+/* pic1 is landscape */
+.pic1{
     text-align: center;
 }
-/* dummy vertical center aligned, icon's shadow */
-.center-vertical{
-    vertical-align: middle;
-    /* make the height same as background/fondation */
-    height: 450px;
-    /* follow the line of the block of background/fondation */
-    display: inline-block;
+/* in desktop mode, deactive mobile icon using display none */
+.mobile{
+    display: none;
 }
-/* don't forget to set the size and display of the icon */
-.icon{
-    width:150px;
-    /* MUST if inline with text: inline-block */
-    display: inline-block;
-    /* because height of icon>text, icon will be the standard of vertical-align in the same row as text */
-    /* set middle if want icon is in the middle of row (div), otherwise top or bottom */
-    vertical-align: middle;
+/* in mobile mode, the mobile icon just a letter with block background opposite to icon_color for desktop */
+/* when calling a 2-word class together in CSS, just use format .[Word1].[Word2]{} */
+.icon.mobile{
+    background: blueviolet;
+    color: white;
+    /* to make logo P smaller in mobile */
+    font-size: 12px;
+}
+/* calling media query */
+/* after checking with "inspect", the Home - Getting Started buttons make the second row when screen width < 627px */
+/* when screen width < 627px (in other words in mobile mode case...) */
+@media only screen and (max-width: 627px){
+    .mobile{
+        display: block;
+    }
+    .desktop{
+        display: none;
+        /* here Patrick, Home, Contact Us, Sign In will disappear because of desktop class */
+    }
+    /* make get started smaller in mobile */
+    html{
+        font-size: 12px;
+    }
 }
